Fix wrong overflow property

--- a/static/main.css
+++ b/static/main.css
@@ -5,7 +5,7 @@
 
 body {
   min-width: 420px;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-wrap: anywhere;
   overscroll-behavior: none auto;
 }
